@@ -5,6 +5,18 @@
         [Qt] Need a final integration between QtLauncher and QGVLauncher
         https://bugs.webkit.org/show_bug.cgi?id=35292
 
+        WebKit coding style fixes.
+
+        * QtLauncher/main.cpp:
+        (LauncherWindow::resetZoom):
+
+2010-02-23  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Need a final integration between QtLauncher and QGVLauncher
+        https://bugs.webkit.org/show_bug.cgi?id=35292
+
         Add cloneWindow feature to QtLauncher, when running on QGraphicsView mode.
 
         * QtLauncher/main.cpp:
